--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       </div>
       <div class="modal-body">
         Do you want to start a new game?
+        <p>Optional Game Key: <input type='text' id='gameseed'>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" id="newGameModalCancelButton">Cancel</button>
